--- a/pages/ru/index.html
+++ b/pages/ru/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Best Offers</title>
-    <link rel="icon" href="images/logo-web.svg" type="web-logo" />
+    <link rel="icon" href="/images/logo-web.svg" type="web-logo" />
     <link rel="apple-touch-icon" href="images/logo-web.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -12,7 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
 
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
@@ -24,14 +24,14 @@
       <div class="container">
         <section class="header-elem">
           <a href="index.html" class="header-elem__logo">
-            <img src="images/logo-web.svg" alt="logo" />
+            <img src="/images/logo-web.svg" alt="logo" />
           </a>
-          <a href="./pages/404-error.html" class="company">Company</a>
+          <a href="/pages/ru/404-error.html" class="company">Компания</a>
           <div class="phone-box">
             <a href="tel:+998909999999">
               <img
                 class="phone-box__icon"
-                src="images/icons/phone.svg"
+                src="/images/icons/phone.svg"
                 alt="icon"
               />
             </a>
@@ -41,12 +41,12 @@
           </div>
           <div class="two-buttons">
             <a
-              href="/pages/registrations/create-account.html"
+              href="/pages/ru/registrations/create-account.html"
               class="header-elem__btn"
             >
-              <span>Sign Up</span><i class="bx bxs-plus-circle"></i>
+              <span>Регистрация</span><i class="bx bxs-plus-circle"></i>
             </a>
-            <a href="/pages/ru/index.html" class="translate-btn">Rus</a>
+            <button class="translate-btn">Uz</button>
           </div>
         </section>
       </div>
@@ -57,27 +57,27 @@
         <section class="what-v-do">
           <span>
             <div class="what-v-do__line"></div>
-            <h3>Work With</h3>
-            <span>Best Offer Deal</span>
+            <h3>Работайте вместе с</h3>
+            <span>Best Offer Deals</span>
           </span>
-          <h1>INOVATE SOLUTION FOR BUSINESS SUCCESS</h1>
+          <h1>ИННОВАЦИОННОЕ РЕШЕНИЕ ДЛЯ УСПЕХА БИЗНЕСА</h1>
           <p>
-            We provide services and solutions, and supply any needs to our
-            partners and government institutions. We focus on the best and
-            honest, and promptest services to our clients, and treat our
-            suppliers and partners.
+            Мы предоставляем услуги и решения, а также удовлетворяем любые
+            потребности наших партнеров и государственных учреждений. Мы
+            ориентируемся на лучшее, честное и быстрое обслуживание наших
+            клиентов и относимся к нашим поставщикам и партнерам.
           </p>
           <div class="what-v-do__elements">
             <a
-              href="pages/registrations/create-account.html"
+              href="/pages/ru/registrations/create-account.html"
               class="header-elem__btn"
             >
-              Work Together <i class="bx bxs-plus-circle"></i>
+              Работать вместе<i class="bx bxs-plus-circle"></i>
             </a>
             <div class="what-v-do__numbers">
-              <img src="images/icons/phone.svg" alt="icon" />
+              <img src="/images/icons/phone.svg" alt="icon" />
               <span class="what-v-do__tell">
-                <p>Call Everyday</p>
+                <p>Звоните каждый день</p>
                 <a href="tel:+998909999999">+998 (90) 999-99-99</a>
               </span>
             </div>
@@ -90,19 +90,19 @@
           <div class="container">
             <div class="what-v-do2_elements">
               <span class="what-v-do2__text">
-                <h2>WHAT WE DO?</h2>
+                <h2>Что мы делаем?</h2>
                 <h3>
-                  Provide consulting services to any type <br />
-                  and size clients.
+                  Оказываем консультационные услуги <br />
+                  любого типа и размер клиентов
                 </h3>
                 <p>
-                  Supply with the highest quality any type of equipment and
-                  parts, construction materials and products, office supplies
-                  and appliances, household goods and products, machinery and
-                  transportation and parts for them
+                  Поставка высочайшего качества любого типа оборудования и
+                  комплектующие, строительные материалы и изделия, канцелярские
+                  товары и бытовая техника, товары и изделия для дома, машины и
+                  транспорт и запчасти к ним
                 </p>
               </span>
-              <img src="images/element-img/Group 1.svg" alt="hand" />
+              <img src="/images/element-img/Group 1.svg" alt="hand" />
             </div>
           </div>
         </div>
@@ -111,22 +111,23 @@
         <section class="fast-way">
           <div class="fast-way__text">
             <h2>
-              THE FASTEST WAY TO ACHIVE YOUR <span>BUSINESS SUCCESS </span>
+              САМЫЙ БЫСТРЫЙ СПОСОБ <br />
+              ДОБИТЬСЯ СВОЕГО <span> БИЗНЕС-УСПЕХА </span>
             </h2>
 
             <span>
               <a
-                href="pages/registrations/create-account.html"
+                href="/pages/ru/registrations/create-account.html"
                 class="header-elem__btn"
               >
-                Work Together <i class="bx bxs-plus-circle"></i>
+                Работать вместе <i class="bx bxs-plus-circle"></i>
               </a>
             </span>
           </div>
           <div class="fast-way__img">
             <img
               class="list-dude"
-              src="images/back-images/Order processed.png"
+              src="/images/back-images/Order processed.png"
               alt="logo"
             />
           </div>
@@ -134,13 +135,13 @@
 
         <section class="our-mission">
           <div class="our-mission__back">
-            <img src="images/back-images/Group.svg" alt="logo" />
+            <img src="/images/back-images/Group.svg" alt="logo" />
           </div>
-          <h2>OUR MISSIONS</h2>
+          <h2>НАШИ МИСИИ</h2>
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
           <div class="our-mission__card-box">
             <div>
-              <img src="images/icons/Group_fill.svg" alt="icon" />
+              <img src="/images/icons/Group_fill.svg" alt="icon" />
               <span>
                 <h3>Provide consulting</h3>
                 <p>
@@ -152,7 +153,7 @@
               </span>
             </div>
             <div>
-              <img src="images/icons/Safe.svg" alt="icon" />
+              <img src="/images/icons/Safe.svg" alt="icon" />
               <span>
                 <h3>Safe deal & Transaction</h3>
                 <p>
@@ -164,7 +165,7 @@
               </span>
             </div>
             <div>
-              <img src="images/icons/Idea.svg" alt="icon" />
+              <img src="/images/icons/Idea.svg" alt="icon" />
               <span>
                 <h3>Services & Solutions</h3>
                 <p>
@@ -176,7 +177,7 @@
               </span>
             </div>
             <div>
-              <img src="images/icons/Group_fill.svg" alt="icon" />
+              <img src="/images/icons/Group_fill.svg" alt="icon" />
               <span>
                 <h3>Provide consulting</h3>
                 <p>
@@ -211,21 +212,21 @@
       </div>
     </main>
     <footer>
-      <img class="footer" src="images/back-images/union.svg" alt="logo" />
+      <img class="footer" src="/images/back-images/union.svg" alt="logo" />
       <div class="container">
         <div class="footer-elements">
           <div>
             <a href="#"
-              ><img src="images/back-images/white-logo.svg" alt="logo"
+              ><img src="/images/back-images/white-logo.svg" alt="logo"
             /></a>
             <span>
-              <h3>Contact</h3>
+              <h3>Контакт</h3>
               <a href="#">someemailhere@mail.com</a>
               <a href="tel:+998909999999">+998 (90) 999-99-99</a>
               <a href="tel:+998909999999">+998 (90) 999-99-99</a>
             </span>
           </div>
-          <h5>©2023 <big>Best Offer Deals</big> all rights reserved</h5>
+          <h5>©2023 <big>Best Offer Deals</big> все права защищены</h5>
         </div>
       </div>
     </footer>
